fixed align

--- a/styles.css
+++ b/styles.css
@@ -59,12 +59,14 @@ h1 {
 .imgcontainer {
     position:relative;
     width: 50%;
+    align-self: center;
 }
 
 .image {
     display: block;
     width: 100%;
     height: auto;
+    align-self: center;
 }
 
 .overlaytext {
